Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignNumberObject.quorum
class Main
    action Main
        Object v
        v:SetValue()
        Test(v)
    end

    action Test(number var)
    end
end
